sw/source/core/doc/docredln.cxx
@@ -1408,11 +1408,9 @@ void SwRangeRedline::CopyToSection()
     pDoc->SetCopyIsMove( true );
 
     // The IsRedlineMove() flag causes the behaviour of the
-    // SwDoc::_CopyFlyInFly method to change, which will eventually be
-    // called by the pDoc->Copy line below (through SwDoc::Copy_,
-    // SwDoc::CopyWithFlyInFly). This rather obscure bugfix
-    // apparently never really worked.
-    pDoc->getIDocumentRedlineAccess().SetRedlineMove( pStt->nContent == 0 );
+    // DocumentContentOperationsManager::CopyFlyInFlyImpl() method to change,
+    // which will eventually be called by the CopyRange() below.
+    pDoc->getIDocumentRedlineAccess().SetRedlineMove(true);
 
     if( pCSttNd )
     {
